Fix overflow of spark-icon in <main>

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 main {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 section.slider-section {
@@ -9,7 +10,7 @@ section.slider-section {
   position: relative;
   div.slider {
     display: flex;
-    /* aspect-ratio: 5 / 1; */
+    /* aspect-ratio: 4 / 1; */
     overflow: auto;
     scrollbar-width: none;
     scroll-snap-type: x mandatory;
@@ -39,89 +40,6 @@ section.slider-section {
     }
     > a:hover {
       opacity: 1;
-    }
-  }
-}
-
-section.bento-sale {
-  min-height: 300px;
-  width: 100%;
-  margin-top: 40px;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  > div {
-    /* border: 1px solid red; */
-    display: flex;
-    justify-content: space-evenly;
-    gap: 20px;
-    flex-wrap: wrap;
-    > article.bento-card {
-      height: 300px;
-      border: 1px solid lightgray;
-      transition: scale 0.5s ease-in-out;
-    }
-    > article.bento-card:hover {
-      scale: 1.1;
-    }
-    > article.bento-card.category-sale {
-      width: 500px;
-      height: 200px;
-      border: 0.5px solid lightgray;
-      border-radius: 10px;
-      display: flex;
-      > div.sale-text {
-        height: 100%;
-        width: 40%;
-        font-size: 0.8rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin-left: 20px;
-        padding-left: 10px;
-      }
-      > div.sale-image {
-        height: 100%;
-        width: 60%;
-        background-size: 325px;
-        background-position: left;
-        background-repeat: no-repeat;
-      }
-    }
-
-    > article.bento-card.bank-card {
-      padding: 20px;
-      width: 420px;
-      height: 200px;
-      border: 0.5px solid lightgray;
-      border-radius: 10px;
-      display: flex;
-      flex-direction: column;
-      /* flex-grow: 1; */
-      > h2 {
-        font-size: 16px;
-      }
-      > div {
-        color: var(--primary-color);
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 10px;
-        > h3 {
-          font-size: 2.5rem;
-        }
-        > p {
-          font-size: 14px;
-          line-height: 2;
-          > span {
-            font-weight: 700;
-          }
-        }
-        > img {
-          height: 20px;
-        }
-      }
     }
   }
 }
